# ddd_dci_example

./: CMakeLists.txt  README.md  run.sh  useless_build.sh
include/base/: BaseType.h  Role.h  Unknown.h  interface_def.h
include/dci/context/: Company.h  Home.h  Park.h  School.h
include/dci/data/: Account.h  IdentityCard.h  StudentCard.h  WorkCard.h
include/dci/object/: People.h
include/dci/role/: enjoyer.h  human.h  student.h  worker.h
include/ddd/aggregate/: Company.h  Home.h  Park.h  School.h
include/ddd/entity/: People.h
include/ddd/service/: enjoyer_service.h  human_service.h  student_service.h  worker_service.h
include/ddd/vo/: Account.h  IdentityCard.h  StudentCard.h  WorkCard.h
src/base/: BaseType.cpp
src/ddd/entity/: People.cpp
test/: FtDCI.cpp  FtDDD.cpp  FtTest.cpp  main.cpp
